Fixed crappy header spacing
- no longer is there an obscene amount of space between the country's title and the timer

--- a/game.css
+++ b/game.css
@@ -15,6 +15,7 @@ body {
 
 h1 {
 	font-size: 80pt;
+	margin: auto;
 }
 
 h2 {
